Initial commit of new Player Options weapon section

--- a/AD&D 2E Revised/2EStyle.css
+++ b/AD&D 2E Revised/2EStyle.css
@@ -278,8 +278,8 @@ div[class^="sheet-section"] {
 .charsheet input.sheet-tab67:checked ~ div.sheet-section-psionics-standard-repeat,
 .charsheet input.sheet-tab68:checked ~ div.sheet-section-psionics-advanced-repeat,
 .charsheet input.sheet-tab69:checked ~ div.sheet-section-granted-powers,
-.charsheet input.sheet-tab70:checked ~ div.sheet-section-weapon-melee,
-.charsheet input.sheet-tab71:checked ~ div.sheet-section-weapon-ranged,
+.charsheet input.sheet-tab70:checked ~ div.sheet-section-weapon-standard-melee,
+.charsheet input.sheet-tab71:checked ~ div.sheet-section-weapon-standard-ranged,
 .charsheet input.sheet-tab72:checked ~ div.sheet-section-movement-mount,
 .charsheet input.sheet-tab73:checked ~ div.sheet-section-character-info-details,
 .charsheet input.sheet-tab74:checked ~ div.sheet-section-character-info-tracker,
@@ -288,7 +288,11 @@ div[class^="sheet-section"] {
 .charsheet input.sheet-tab77:checked ~ div.sheet-section-movement-barbarian,
 .charsheet input.sheet-tab78:checked ~ div.sheet-section-attributes-dream,
 .charsheet input.sheet-tab79:checked ~ div.sheet-section-movement-swimming,
-.charsheet input.sheet-tab80:checked ~ div.sheet-section-movement-flying {
+.charsheet input.sheet-tab80:checked ~ div.sheet-section-movement-flying,
+.charsheet input.sheet-tab81:checked ~ div.sheet-section-weapon-standard,
+.charsheet input.sheet-tab82:checked ~ div.sheet-section-weapon-player-option,
+.charsheet input.sheet-tab83:checked ~ div.sheet-section-weapon-player-option-melee,
+.charsheet input.sheet-tab84:checked ~ div.sheet-section-weapon-player-option-ranged {
     display: block;
 }
 
@@ -401,7 +405,11 @@ div[class^="sheet-section"] {
 .charsheet input.sheet-tab77:checked + span.sheet-tab77,
 .charsheet input.sheet-tab78:checked + span.sheet-tab78,
 .charsheet input.sheet-tab79:checked + span.sheet-tab79,
-.charsheet input.sheet-tab80:checked + span.sheet-tab80 {
+.charsheet input.sheet-tab80:checked + span.sheet-tab80, 
+.charsheet input.sheet-tab81:checked + span.sheet-tab81, 
+.charsheet input.sheet-tab82:checked + span.sheet-tab82, 
+.charsheet input.sheet-tab83:checked + span.sheet-tab83, 
+.charsheet input.sheet-tab84:checked + span.sheet-tab84 {
     display: inline-table;
     background: #ab8b57;    
     color: white;
