added max health update

--- a/Ironcrunch/src/html/components/header/header.html
+++ b/Ironcrunch/src/html/components/header/header.html
@@ -30,6 +30,12 @@
           <option value="1">1</option>
           <option value="0">0</option>
         </select>
+        <div class="sheet-health-status-box">
+          <h3 class="sheet-health-max">MAX</h3>
+          <h3><span name="attr_max_health"></span>
+            <input class="sheet-hide" type="text" name="attr_max_health" value="20"/>
+          </h3>
+        </div>
       </div>
       <div>
         <h2>Spirit</h2><img/>
