--- a/Ironcrunch/src/src/workers/Ironcrunch.pug
+++ b/Ironcrunch/src/src/workers/Ironcrunch.pug
@@ -21,6 +21,11 @@ script(type="text/worker")
   |         if (numDebilities>1) setAttrs({ momentum_reset: 0});
   |     });
   | });
+  | //Calculate Max Health
+  | on('change:iron', function() {
+  |   console.log('i ran 1')
+  |   updateMaxHealth();
+  | });
   | //Cannot increase Health while Wounded
   | //Health reaching 0 marks Wounded
   | on('change:health', function(eventinfo) {
@@ -156,3 +161,13 @@ script(type="text/worker")
   |         });
   |     });
   | });
+
+  | var updateMaxHealth = function() {
+  |   console.log('i ran 2')
+  |   getAttrs(['iron'], function(v) {
+  |     let max_health = (v.iron*4)+16
+  |     setAttrs({
+  |       max_health: max_health
+  |     });
+  |   });
+  | };
