--- a/Ironcrunch/src/src/components/resources/resources.pug
+++ b/Ironcrunch/src/src/components/resources/resources.pug
@@ -9,6 +9,11 @@ div.sheet-resources
     select(name='attr_health_one')
       each val in trackValuesNine
         option(value=val)=val
+    div.sheet-health-status-box
+      h3.sheet-health-max MAX
+      h3
+        span(name='attr_max_health')
+        input(type='text' class='sheet-hide' name='attr_max_health' value='20')
 
   div
     h2 Spirit
