--- a/Ironcrunch/src/src/components/stats/stats.pug
+++ b/Ironcrunch/src/src/components/stats/stats.pug
@@ -7,13 +7,12 @@ div.sheet-stats
         type='roll'
         title=`Roll +${stat.capital}`
         name=`roll${stat.capital}`
-        value=`&{template:ironcrunch} {{header=@{character_name}}} {{name=Roll +${stat.lower}}} {{action=[[1d6+@{${stat.lower}}+(?{Modifier|0})]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{#{}}+(?{Modifier|0})]]}} {{add=[[(?{Modifier|0})]]}} {{stat=[[@{${stat.lower}}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{${stat.lower}}+(?{Modifier|0}))-(@{momentum})]]}}`
+        value=`&{template:ironcrunch_moves} {{header=@{character_name}}} {{name=Roll +${stat.lower}}} {{action=[[d12+@{${stat.lower}}+(?{Modifier|0})]]}} {{negate1=[[1+@{${stat.lower}}+(?{Modifier|0})]]}} {{negate2=[[2+@{${stat.lower}}+(?{Modifier|0})]]}} {{negate3=[[3+@{${stat.lower}}+(?{Modifier|0})]]}} {{negate4=[[4+@{${stat.lower}}+(?{Modifier|0})]]}} {{negate5=[[5+@{${stat.lower}}+(?{Modifier|0})]]}} {{negate6=[[6+@{${stat.lower}}+(?{Modifier|0})]]}} {{negate7=[[7+@{${stat.lower}}+(?{Modifier|0})]]}} {{negate8=[[8+@{${stat.lower}}+(?{Modifier|0})]]}} {{negate9=[[9+@{${stat.lower}}+(?{Modifier|0})]]}} {{negate10=[[10+@{${stat.lower}}+(?{Modifier|0})]]}} {{negate11=[[11+@{${stat.lower}}+(?{Modifier|0})]]}} {{negate12=[[12+@{${stat.lower}}+(?{Modifier|0})]]}} {{challenge1=[[d20]]}} {{challenge2=[[d20]]}} {{momentum=[[@{momentum}]]}} {{modifiers=[[@{${stat.lower}}+(?{Modifier|0})]]}} {{add=[[(?{Modifier|0})]]}} {{stat=[[@{${stat.lower}}]]}}`
       )
       h3.sheet-stats-title=stat.upper
       input(
         type='text'
         class='sheet-stats-input'
         name=`attr_${stat.lower}`
-        placeholder=stat.placeholder
-        value=''
+        value='1'
       )
