--- a/Ironcrunch/src/src/roll-templates/moves.pug
+++ b/Ironcrunch/src/src/roll-templates/moves.pug
@@ -1,13 +1,82 @@
-
+mixin actionDieNegated
+  tr
+    td Previous Action Score:
+    td {{action}}
+  tr
+      td(colspan="2" class="sheet-subfooter sheet-alert") Action die cancelled for matching negative momentum.
+  tr
+    td Stat + Add:
+    td {{stat}} + {{add}}
+  tr
+    td New Action Score:
+    td {{modifiers}}
+  tr
+    td
+      span Challenge Dice:
+    td
+      span {{challenge1}} {{challenge2}}
 table
   | {{#action}}
   tr
     td(colspan="2" class="sheet-subheader") {{header}}
   tr
-    th(colspan="2") {{name}}  
+    th(colspan="2") {{name}}
+  | {{#rollLess() momentum 0}}
+  | {{#rollTotal() momentum -1}}
+  | {{#rollTotal() action negate1 }}
+  +actionDieNegated
+  | {{/rollTotal() action negate1 }}
+  | {{#rollTotal() action negate2 }}
+  +actionDieNegated
+  | {{/rollTotal() action negate2 }}
+  | {{/rollTotal() momentum -1}}
+  | {{#rollTotal() momentum -2}}
+  | {{#rollTotal() action negate3 }}
+  +actionDieNegated
+  | {{/rollTotal() action negate3 }}
+  | {{#rollTotal() action negate4 }}
+  +actionDieNegated
+  | {{/rollTotal() action negate4 }}
+  | {{/rollTotal() momentum -2}}
+  | {{#rollTotal() momentum -3}}
+  | {{#rollTotal() action negate5 }}
+  +actionDieNegated
+  | {{/rollTotal() action negate5 }}
+  | {{#rollTotal() action negate6 }}
+  +actionDieNegated
+  | {{/rollTotal() action negate6 }}
+  | {{/rollTotal() momentum -3}}
+  | {{#rollTotal() momentum -4}}
+  | {{#rollTotal() action negate7 }}
+  +actionDieNegated
+  | {{/rollTotal() action negate7 }}
+  | {{#rollTotal() action negate8 }}
+  +actionDieNegated
+  | {{/rollTotal() action negate8 }}
+  | {{/rollTotal() momentum -4}}
+  | {{#rollTotal() momentum -5}}
+  | {{#rollTotal() action negate9 }}
+  +actionDieNegated
+  | {{/rollTotal() action negate9 }}
+  | {{#rollTotal() action negate10 }}
+  +actionDieNegated
+  | {{/rollTotal() action negate10 }}
+  | {{/rollTotal() momentum -5}}
+  | {{#rollTotal() momentum -6}}
+  | {{#rollTotal() action negate11 }}
+  +actionDieNegated
+  | {{/rollTotal() action negate11 }}
+  | {{#rollTotal() action negate12 }}
+  +actionDieNegated
+  | {{/rollTotal() action negate12 }}
+  | {{/rollTotal() momentum -6}}
+  | {{/rollLess() momentum 0}}
+  | {{#^rollLess() momentum 0}}
   tr
-    td span Action Score: 
-    td span {{action}}
+    td
+      span Action Score: 
+    td
+      span {{action}}
   tr
     td
       span Challenge Dice: 
@@ -51,6 +120,7 @@ table
   | {{/^rollGreater() action challenge2}}
   | {{/^rollTotal() challenge1 challenge2}}
   | {{/^rollGreater() action challenge1}}
+  | {{/^rollLess() momentum 0}}
   | {{/action}}
   | {{#vow}}
   tr
