finished momentum widget

--- a/Ironcrunch/src/html/components/header/header.html
+++ b/Ironcrunch/src/html/components/header/header.html
@@ -10,35 +10,20 @@
     </div>
     <div class="sheet-resources">
       <div>
-        <h2>Health</h2><img/>
-        <select name="attr_health_ten">
-          <option value="40">40</option>
-          <option value="30">30</option>
-          <option value="20">20</option>
-          <option value="10">10</option>
-          <option value="0">0</option>
-        </select>
-        <select name="attr_health_one">
-          <option value="9">9</option>
-          <option value="8">8</option>
-          <option value="7">7</option>
-          <option value="6">6</option>
-          <option value="5">5</option>
-          <option value="4">4</option>
-          <option value="3">3</option>
-          <option value="2">2</option>
-          <option value="1">1</option>
-          <option value="0">0</option>
-        </select>
+        <h2 class="sheet-resource-title">Health</h2><img/>
+        <input class="sheet-health-value" type="text" name="attr_health" value="20"/>
         <div class="sheet-health-status-box">
           <h3 class="sheet-health-max">MAX</h3>
-          <h3><span name="attr_max_health"></span>
+          <h3 class="sheet-health-max-value"><span name="attr_max_health"></span>
             <input class="sheet-hide" type="text" name="attr_max_health" value="20"/>
           </h3>
+          <label class="sheet-health-reset">Reset Health
+            <input class="sheet-health-reset sheet-hide" type="checkbox" name="attr_health_reset"/>
+          </label>
         </div>
       </div>
       <div>
-        <h2>Spirit</h2><img/>
+        <h2 class="sheet-resource-title">Spirit</h2><img/>
         <select name="attr_spirit">
           <option value="10">+10</option>
           <option value="9">+9</option>
@@ -54,7 +39,7 @@
         </select>
       </div>
       <div>
-        <h2>Supply</h2><img/>
+        <h2 class="sheet-resource-title">Supply</h2><img/>
         <select name="attr_supply">
           <option value="10">+10</option>
           <option value="9">+9</option>
@@ -70,7 +55,7 @@
         </select>
       </div>
       <div>
-        <h2>Wealth</h2><img/>
+        <h2 class="sheet-resource-title">Wealth</h2><img/>
         <select name="attr_wealth">
           <option value="10">+10</option>
           <option value="9">+9</option>
@@ -86,7 +71,7 @@
         </select>
       </div>
       <div>
-        <h2>Load</h2><img/>
+        <h2 class="sheet-resource-title">Load</h2><img/>
         <select name="attr_load">
           <option value="12">12</option>
           <option value="11">11</option>
