--- a/Ironcrunch/src/html/components/misses/track.html
+++ b/Ironcrunch/src/html/components/misses/track.html
@@ -1,4 +1,5 @@
 
+<h3 class="sheet-divide">&emsp;MISSES&emsp;</h3>
 <div class="sheet-misses-track">
   <div>
     <select class="sheet-progress-input" name="attr_misses-0">
