--- a/Ironcrunch/src/src/components/momentum/momentum.styl
+++ b/Ironcrunch/src/src/components/momentum/momentum.styl
@@ -1,3 +1,6 @@
+.sheet-footer
+  margin-top 3em
+
 .sheet-momentum
   display flex
 
@@ -12,14 +15,14 @@ input[type=checkbox].sheet-momentum-burn:hover ~ div.sheet-momentum-burn-back
   color: white
 
 input[type=checkbox].sheet-momentum-burn
-  width 76px
-  height 20px
+  width 68px
+  height 30px
   opacity 0
   border 0
   vertical-align top
 
 div.sheet-momentum-burn-back
-  margin-top: -28px;
+  margin-top: -30px
   height: 30px
 
 div.sheet-momentum-burn
@@ -28,64 +31,63 @@ div.sheet-momentum-burn
   height 30px
 
 span.sheet-momentum-burn
-  text-align center
-  padding 0.2em 1.3em 0.2em 1.3em
   font-family arial, sans-serif
   font-weight bold
-  font-size 14px
-  margin-left -74px
-  text-align center
+  font-size 18px
+  line-height: 30px;
+  margin-left -61px
 
 .sheet-momentum-box-input
   width 36px
-  height 30px
+  height 30px !important
   opacity 0
   border 0
-  vertical-align top
 
 h3.sheet-momentum-burn
   margin-top -20px
 
 .sheet-momentum-status-box
-  width: 140px;
-  height: 30px;
-  display: inline;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border-radius: 0%;
-  background: transparent;
-  border: 2px solid #4c4d4f;
-  margin-bottom: 2px;
+  width: 103px
+  height: 30px
+  display: flex
+  flex-direction: row
+  justify-content: center
+  align-items: center
+  border-radius: 0%
+  background: transparent
+  border: 2px solid #4c4d4f
+  margin-bottom: 2px
+
+.sheet-momentum-status-value
+  width auto
+  padding-right 0.6em
 
 h3.sheet-momentum-max-box
-    display: inline;
-    padding-left: 2em;
-    line-height: 30px;
+    display: inline
+    padding-left: 2em
+    line-height: 30px
 
 h3.sheet-momentum-reset-box
-    display: inline;
-    padding-left: 1em;
-    line-height: 30px;
+    display: inline
+    padding-left: 1em
+    line-height: 30px
 
 .sheet-momentum-box-back
-  width 22px
   height 30px
   margin-top -30px
 
 .sheet-momentum-box-value
   font-family arial, sans-serif
-  padding 0px
   font-weight bold
   height 30px 
-  padding-top 9px
-  font-size 10px
+  font-size 16px
+  line-height 30px
   color inherit
 
 .sheet-momentum-input
   font-family arial, sans-serif
   font-weight bold
-  width 40px
+  width 30px
   font-size 13px
   text-align center
   background transparent
@@ -103,9 +105,11 @@ h3.sheet-momentum-reset-box
 
 .sheet-momentum-dark
   color white
-  border: 2px solid;
-  background: #4b4d4f;
-  height: 30px;
+  border: 2px solid #4b4d4f
+  background: #4b4d4f
+  height: 30px
+  width: 310px
 
 .sheet-momentum-title
-  padding-top 8px
+  padding-top 4px
+  color white
