--- a/Ironcrunch/src/src/components/nav/nav-bar.styl
+++ b/Ironcrunch/src/src/components/nav/nav-bar.styl
@@ -1,8 +1,10 @@
-// .sheet-nav-bar
+.sheet-nav-bar
+  display flex
 
 // .sheet-nav-child
 
 input[type=radio].sheet-bonds:checked ~ div.sheet-bonds,
 input[type=radio].sheet-summary:checked ~ div.sheet-summary,
 input[type=radio].sheet-vows:checked ~ div.sheet-vows
-  display: block
+  display block
+
