--- a/Ironcrunch/src/src/pages/bonds.pug
+++ b/Ironcrunch/src/src/pages/bonds.pug
@@ -1,1 +1,4 @@
-include ../components/bonds/track.pug
+input(type="radio" name="attr_ironcrunch-page" id="sheet-bonds" class="sheet-hide sheet-bonds" value="2")
+div.sheet-bonds.sheet-hide
+  h3.sheet-divide &emsp;BONDS&emsp;
+  include ../components/bonds/track.pug
