--- a/Ironcrunch/src/src/components/misses/track.pug
+++ b/Ironcrunch/src/src/components/misses/track.pug
@@ -1,6 +1,7 @@
 - var track = [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
 include ../progress/box.pug
 
+h3.sheet-divide &emsp;MISSES&emsp;
 div.sheet-misses-track
   div
     each index in track
