--- a/Ironcrunch/src/src/components/resources/resources.pug
+++ b/Ironcrunch/src/src/components/resources/resources.pug
@@ -1,43 +1,40 @@
 include ./tracks.pug
 div.sheet-resources
   div
-    h2 Health
+    h2.sheet-resource-title Health
     img
-    select(name='attr_health_ten')
-      each val in trackValuesHealth
-        option(value=val)=val
-    select(name='attr_health_one')
-      each val in trackValuesNine
-        option(value=val)=val
+    input(type='text' class="sheet-health-value" name="attr_health" value="20")
     div.sheet-health-status-box
       h3.sheet-health-max MAX
-      h3
+      h3.sheet-health-max-value
         span(name='attr_max_health')
         input(type='text' class='sheet-hide' name='attr_max_health' value='20')
+      label.sheet-health-reset Reset Health
+        input(type="checkbox" class="sheet-health-reset sheet-hide" name="attr_health_reset")
 
   div
-    h2 Spirit
+    h2.sheet-resource-title Spirit
     img
     select(name='attr_spirit')
       each val in trackValuesTen
         option(value=val)=`+${val}`
 
   div
-    h2 Supply
+    h2.sheet-resource-title Supply
     img
     select(name='attr_supply')
       each val  in trackValuesTen
         option(value=val)=`+${val}`
   
   div
-    h2 Wealth
+    h2.sheet-resource-title Wealth
     img
     select(name='attr_wealth')
       each val  in trackValuesTen
         option(value=val)=`+${val}`
 
   div
-    h2 Load
+    h2.sheet-resource-title Load
     img
     select(name='attr_load')
       each val in trackValuesTwelve
