--- a/Ironcrunch/src/src/pages/main.pug
+++ b/Ironcrunch/src/src/pages/main.pug
@@ -5,18 +5,9 @@ include ../components/header/header.pug
 include ../components/nav/nav-bar.pug
 
 //- Pages
-//- Summary 
-input(type="radio" name="attr_ironcrunch-page" id="sheet-summary" class="sheet-hide sheet-summary" value="1" checked)
-div.sheet-summary.sheet-hide
-  include ../components/stats/stats.pug
-//- Bonds
-input(type="radio" name="attr_ironcrunch-page" id="sheet-bonds" class="sheet-hide sheet-bonds" value="2")
-div.sheet-bonds.sheet-hide
-  include ./bonds.pug
-//-  Vows
-input(type="radio" name="attr_ironcrunch-page" id="sheet-vows" class="sheet-hide sheet-vows" value="3")
-div.sheet-vows.sheet-hide
-  include ../components/vows/vows.pug
+include ./summary.pug
+include ./bonds.pug
+include ./vows.pug
 
 //- Footer
 include ../components/momentum/momentum.pug
