split styling for vows

--- a/Ironcrunch/src/html/components/resources/resources.html
+++ b/Ironcrunch/src/html/components/resources/resources.html
@@ -1,21 +1,23 @@
 
 <div class="sheet-resources">
-  <div>
-    <h2 class="sheet-resource-title">Health</h2><img/>
-    <input class="sheet-health-value" type="text" name="attr_health" value="20"/>
+  <div class="sheet-resource">
+    <label class="sheet-health-reset">RESET
+      <input class="sheet-health-reset sheet-hide" type="checkbox" name="attr_health_reset"/>
+    </label>
+    <h2 class="sheet-resource-title">HEALTH</h2>
     <div class="sheet-health-status-box">
-      <h3 class="sheet-health-max">MAX</h3>
-      <h3 class="sheet-health-max-value"><span name="attr_max_health"></span>
-        <input class="sheet-hide" type="text" name="attr_max_health" value="20"/>
-      </h3>
-      <label class="sheet-health-reset">Reset Health
-        <input class="sheet-health-reset sheet-hide" type="checkbox" name="attr_health_reset"/>
-      </label>
+      <input class="sheet-resource-value" type="text" name="attr_health" value="20"/>
+      <div class="sheet-health-max-box">
+        <h3 class="sheet-health-max">/</h3>
+        <h3 class="sheet-health-max-value"><span class="sheet-health-max-value" name="attr_max_health"></span>
+          <input class="sheet-hide" type="text" name="attr_max_health" value="20"/>
+        </h3>
+      </div>
     </div>
   </div>
-  <div>
-    <h2 class="sheet-resource-title">Spirit</h2><img/>
-    <select name="attr_spirit">
+  <div class="sheet-resource">
+    <h2 class="sheet-resource-title">SPIRIT</h2>
+    <select class="sheet-resource-value" name="attr_spirit">
       <option value="10">+10</option>
       <option value="9">+9</option>
       <option value="8">+8</option>
@@ -29,9 +31,9 @@
       <option value="0">+0</option>
     </select>
   </div>
-  <div>
-    <h2 class="sheet-resource-title">Supply</h2><img/>
-    <select name="attr_supply">
+  <div class="sheet-resource">
+    <h2 class="sheet-resource-title">SUPPLY</h2>
+    <select class="sheet-resource-value" name="attr_supply">
       <option value="10">+10</option>
       <option value="9">+9</option>
       <option value="8">+8</option>
@@ -45,9 +47,9 @@
       <option value="0">+0</option>
     </select>
   </div>
-  <div>
-    <h2 class="sheet-resource-title">Wealth</h2><img/>
-    <select name="attr_wealth">
+  <div class="sheet-resource">
+    <h2 class="sheet-resource-title">WEALTH</h2>
+    <select class="sheet-resource-value" name="attr_wealth">
       <option value="10">+10</option>
       <option value="9">+9</option>
       <option value="8">+8</option>
@@ -61,9 +63,9 @@
       <option value="0">+0</option>
     </select>
   </div>
-  <div>
-    <h2 class="sheet-resource-title">Load</h2><img/>
-    <select name="attr_load">
+  <div class="sheet-resource">
+    <h2 class="sheet-resource-title">LOAD</h2>
+    <select class="sheet-resource-value" name="attr_load">
       <option value="12">12</option>
       <option value="11">11</option>
       <option value="10">10</option>
@@ -78,5 +80,15 @@
       <option value="1">1</option>
       <option value="0">0</option>
     </select>
+  </div>
+  <div class="sheet-resource">
+    <h2 class="sheet-resource-title">EXPERIENCE</h2>
+    <div class="sheet-health-status-box">
+      <input class="sheet-resource-value" type="text" name="attr_xp" value="0"/>
+    </div>
+    <h2 class="sheet-resource-title">SPENT</h2>
+    <div class="sheet-health-status-box">
+      <input class="sheet-resource-value" type="text" name="attr_total_xp" value="0"/>
+    </div>
   </div>
 </div>
