--- a/Ironcrunch/src/src/Ironcrunch.styl
+++ b/Ironcrunch/src/src/Ironcrunch.styl
@@ -1,3 +1,11 @@
+@import './components/resources/resources'
+@import './components/misses/misses'
+@import './components/bonds/bonds'
+@import './components/vows/vows'
+@import './components/progress/progress'
+@import './components/nav/nav-bar'
+@import './components/momentum/momentum'
+
 .charsheet
   width: 842px !important
   margin: 0 auto !important
@@ -45,6 +53,9 @@ h3
   margin: 0 0 0px
   padding: 0
   text-transform: uppercase
+
+.sheet-divide
+  margin-top 1em
 
 h3.sheet-divide::after,
 h3.sheet-divide::before
@@ -137,117 +148,6 @@ hr
   background: #ccc
   background-image: linear-gradient(to right, #ccc, #333, #ccc)
 
-@import './components/nav/nav-bar'
-
-input.sheet-clear-vow + .sheet-vow-clear-label
-  border-radius: 4px
-  padding: 2px 4px
-
-input.sheet-clear-vow
-  opacity: 0
-  width: 54px
-  margin-right: 22px
-  cursor: pointer
-
-.sheet-vow-clear-label
-  border: 1px solid #ccc
-  margin-left: -80px
-  width: 80px
-
-.sheet-clear-vow:hover + .sheet-vow-clear-label
-  border-radius: 4px
-  padding: 2px 4px
-  background-color: #ccc
-  color: #4C4D4F
-
-.sheet-page-label:hover,
-.sheet-vow-clear-label:hover
-  border-radius: 4px
-  padding: 2px 4px
-  background-color: #ccc
-  color: #4C4D4F
-
-input.sheet-page1
-  width: 116px
-
-span.sheet-page-label-1
-  margin-left: -119px
-
-input.sheet-page2
-  width: 69px
-
-span.sheet-page-label-2
-  margin-left: -73px
-
-input.sheet-page3
-  width: 54px
-
-span.sheet-page-label-3
-  margin-left: -58px
-
-input.sheet-page4
-  width: 59px
-
-span.sheet-page-label-4
-  margin-left: -63px
-
-input.sheet-page5
-  width: 51px
-
-span.sheet-page-label-5
-  margin-left: -55px
-
-input.sheet-page6
-  width: 52px
-
-span.sheet-page-label-6
-  margin-left: -56px
-
-input.sheet-page7
-  width: 42px
-
-span.sheet-page-label-7
-  margin-left: -45px
-
-input.sheet-page8
-  width: 138px
-
-span.sheet-page-label-8
-  margin-left: -142px
-
-input.sheet-page9
-  width: 101px
-
-span.sheet-page-label-9
-  margin-left: -104px
-
-input.sheet-page6
-  width: 56px
-
-span.sheet-page-label-6
-  margin-left: -60px
-  width: 56px
-
-.sheet-vertleft
-  border-left: 2px solid #4C4D4F
-  height: 1000px
-  margin-left: 20px
-  -webkit-border-image: -webkit-gradient(linear, 0 0, 0 100%, from(#4C4D4F), to(rgba(0, 0, 0, 0))) 1 100%
-  -webkit-border-image: -webkit-linear-gradient(#4C4D4F, rgba(0, 0, 0, 0)) 1 100%
-  -moz-border-image: -moz-linear-gradient(#4C4D4F, rgba(0, 0, 0, 0)) 1 100%
-  -o-border-image: -o-linear-gradient(#4C4D4F, rgba(0, 0, 0, 0)) 1 100%
-  border-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), #4C4D4F, rgba(0, 0, 0, 0)) 1 100%
-
-.sheet-vertright
-  border-right: 2px solid #4C4D4F
-  height: 1000px
-  margin-right: 20px
-  -webkit-border-image: -webkit-gradient(linear, 0 0, 0 100%, from(#4C4D4F), to(rgba(0, 0, 0, 0))) 1 100%
-  -webkit-border-image: -webkit-linear-gradient(#4C4D4F, rgba(0, 0, 0, 0)) 1 100%
-  -moz-border-image: -moz-linear-gradient(#4C4D4F, rgba(0, 0, 0, 0)) 1 100%
-  -o-border-image: -o-linear-gradient(#4C4D4F, rgba(0, 0, 0, 0)) 1 100%
-  border-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), #4C4D4F, rgba(0, 0, 0, 0)) 1 100%
-
 .sheet-stats
   display: flex
   justify-content: space-evenly
@@ -261,30 +161,10 @@ span.sheet-page-label-6
   justify-content: center
   align-items: center
 
-// Momentum
-@import './components/momentum/momentum'
-
 .sheet-bonds
   margin-bottom: 0px
 
 .sheet-bond
-  display: flex
-  flex-direction: column
-  justify-content: center
-  align-items: center
-
-.sheet-vows
-  margin-bottom: 0px
-
-.sheet-vows-header,
-.sheet-progress-header
-  display: flex
-  justify-content: space-around
-  align-items: center
-  margin-bottom: 10px
-
-.sheet-vow,
-.sheet-progress
   display: flex
   flex-direction: column
   justify-content: center
@@ -395,22 +275,6 @@ span.sheet-page-label-6
   font-weight: bold
   font-size: 14px
 
-.sheet-vow-name,
-.sheet-progress-name,
-.sheet-page-label,
-.sheet-vow-clear-label
-  width: 100%
-  font-family: arial, sans-serif
-  font-weight: bold
-  font-size: 14px
-
-input.sheet-vow-name,
-input.sheet-progress-name
-  background: #E6E7E8
-  border: 2px solid #494a4c
-  border-radius: 0
-  margin-bottom: 0.2em
-
 .sheet-border
   border: 1px solid #ccc
   border-radius: 4px
@@ -418,10 +282,6 @@ input.sheet-progress-name
 textarea.sheet-full-width
   width: 95%
   resize: vertical
-
-.sheet-page-label,
-.sheet-vow-clear-label
-  display: inline
 
 input.sheet-filler[type="radio"],
 input[type="checkbox"].sheet-checkbox
