--- a/Ironcrunch/src/html/components/header/header.html
+++ b/Ironcrunch/src/html/components/header/header.html
@@ -1,30 +1,28 @@
 
 <div class="sheet-character-details-bar">
   <div>
-    <h2>Experience
-      <input class="sheet-xp" type="text" name="attr_xp" placeholder="0"/>
-      <input class="sheet-xp" type="text" name="attr_spent_xp" placeholder="0"/>
-    </h2>
     <div class="sheet-character-name">
       <input class="sheet-pc-name" type="text" name="attr_character_name" placeholder="Character Name"/>
     </div>
     <div class="sheet-resources">
-      <div>
-        <h2 class="sheet-resource-title">Health</h2><img/>
-        <input class="sheet-health-value" type="text" name="attr_health" value="20"/>
+      <div class="sheet-resource">
+        <label class="sheet-health-reset">RESET
+          <input class="sheet-health-reset sheet-hide" type="checkbox" name="attr_health_reset"/>
+        </label>
+        <h2 class="sheet-resource-title">HEALTH</h2>
         <div class="sheet-health-status-box">
-          <h3 class="sheet-health-max">MAX</h3>
-          <h3 class="sheet-health-max-value"><span name="attr_max_health"></span>
-            <input class="sheet-hide" type="text" name="attr_max_health" value="20"/>
-          </h3>
-          <label class="sheet-health-reset">Reset Health
-            <input class="sheet-health-reset sheet-hide" type="checkbox" name="attr_health_reset"/>
-          </label>
+          <input class="sheet-resource-value" type="text" name="attr_health" value="20"/>
+          <div class="sheet-health-max-box">
+            <h3 class="sheet-health-max">/</h3>
+            <h3 class="sheet-health-max-value"><span class="sheet-health-max-value" name="attr_max_health"></span>
+              <input class="sheet-hide" type="text" name="attr_max_health" value="20"/>
+            </h3>
+          </div>
         </div>
       </div>
-      <div>
-        <h2 class="sheet-resource-title">Spirit</h2><img/>
-        <select name="attr_spirit">
+      <div class="sheet-resource">
+        <h2 class="sheet-resource-title">SPIRIT</h2>
+        <select class="sheet-resource-value" name="attr_spirit">
           <option value="10">+10</option>
           <option value="9">+9</option>
           <option value="8">+8</option>
@@ -38,9 +36,9 @@
           <option value="0">+0</option>
         </select>
       </div>
-      <div>
-        <h2 class="sheet-resource-title">Supply</h2><img/>
-        <select name="attr_supply">
+      <div class="sheet-resource">
+        <h2 class="sheet-resource-title">SUPPLY</h2>
+        <select class="sheet-resource-value" name="attr_supply">
           <option value="10">+10</option>
           <option value="9">+9</option>
           <option value="8">+8</option>
@@ -54,9 +52,9 @@
           <option value="0">+0</option>
         </select>
       </div>
-      <div>
-        <h2 class="sheet-resource-title">Wealth</h2><img/>
-        <select name="attr_wealth">
+      <div class="sheet-resource">
+        <h2 class="sheet-resource-title">WEALTH</h2>
+        <select class="sheet-resource-value" name="attr_wealth">
           <option value="10">+10</option>
           <option value="9">+9</option>
           <option value="8">+8</option>
@@ -70,9 +68,9 @@
           <option value="0">+0</option>
         </select>
       </div>
-      <div>
-        <h2 class="sheet-resource-title">Load</h2><img/>
-        <select name="attr_load">
+      <div class="sheet-resource">
+        <h2 class="sheet-resource-title">LOAD</h2>
+        <select class="sheet-resource-value" name="attr_load">
           <option value="12">12</option>
           <option value="11">11</option>
           <option value="10">10</option>
@@ -87,6 +85,16 @@
           <option value="1">1</option>
           <option value="0">0</option>
         </select>
+      </div>
+      <div class="sheet-resource">
+        <h2 class="sheet-resource-title">EXPERIENCE</h2>
+        <div class="sheet-health-status-box">
+          <input class="sheet-resource-value" type="text" name="attr_xp" value="0"/>
+        </div>
+        <h2 class="sheet-resource-title">SPENT</h2>
+        <div class="sheet-health-status-box">
+          <input class="sheet-resource-value" type="text" name="attr_total_xp" value="0"/>
+        </div>
       </div>
     </div>
   </div>
