--- a/Ironcrunch/src/src/components/misses/track.pug
+++ b/Ironcrunch/src/src/components/misses/track.pug
@@ -1,4 +1,4 @@
-- var track = [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
+- var track = [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
 include ../progress/box.pug
 
 h3.sheet-divide &emsp;MISSES&emsp;
