before review of roll complexity

--- a/Fading Suns v2.75/Fading_Suns_v2.75.css
+++ b/Fading Suns v2.75/Fading_Suns_v2.75.css
@@ -497,7 +497,8 @@ div.repcontrol {
 /* edit view h2 and h3 arrows*/
 .sheet-fs-h2arrow:not(:checked) + .sheet-fs-showsect + .sheet-fs-h2-section,
 .sheet-fs-h2arrow:not(:checked) + .sheet-fs-showsect + button,
-.sheet-fs-h2arrow:not(:checked) + .sheet-fs-showsect + button + .sheet-fs-h2-section,
+.sheet-fs-h2arrow:not(:checked) + .sheet-fs-showsect + button + span,
+.sheet-fs-h2arrow:not(:checked) + .sheet-fs-showsect + button + span + .sheet-fs-h2-section,
 .sheet-fs-h2arrow:not(:checked) + .sheet-fs-showsect + .sheet-fs-h2-section + .sheet-fs-h2-section,
 .sheet-fs-h2arrow:not(:checked) + .sheet-fs-showsect + .sheet-fs-h2-section + .sheet-fs-h2-section + .sheet-fs-h2-section,
 .sheet-fs-h2arrow:not(:checked) + .sheet-fs-showsect + .sheet-fs-nontable-name,
@@ -672,13 +673,13 @@ div.repcontrol {
     line-height: 20px;
 }
 
-.sheet-rolltemplate-fs-GoalRoll div,
+/*.sheet-rolltemplate-fs-GoalRoll div,
 .sheet-rolltemplate-fs-GoalRoll-fromAPI div,
 .sheet-rolltemplate-fs-ApiError div,
 .sheet-rolltemplate-fs-InitRoll div,
 .sheet-rolltemplate-fs-d6Roll {
     padding: 2px;
-};
+}*/
  
 .sheet-rolltemplate-fs-GoalRoll span,
 .sheet-rolltemplate-fs-GoalRoll-fromAPI span,
@@ -690,7 +691,6 @@ div.repcontrol {
     font-size: 1.1em;
     font-variant: small-caps;
     line-height: 1.6em;
-    padding-left: 5px;
     text-align: left;
 }
 
@@ -971,6 +971,7 @@ input[type="number"] {
     min-width: 25px;
     margin-left: 5px;
 }
+
 .sheet-fs-grid-characteristics-init label {
     margin-left: 3px;
 }
@@ -989,6 +990,7 @@ input[type="number"] {
     align-self: stretch;
 }
 
+
 .sheet-fs-skill {
     width:100%;
     /*min-width:200px;*/
@@ -1006,6 +1008,7 @@ input[type="number"] {
 .sheet-fs-skill .sheet-fs-skill-label,
 .sheet-fs-skill .sheet-fs-skill-label span,
 .sheet-fs-skill .sheet-fs-skill-label input,
+.sheet-fs-skill .sheet-fs-skill-label button,
 input.sheet-fs-blessingcurse,
 input.sheet-fs-beneficeaffliction {
     white-space: nowrap;
@@ -1015,6 +1018,9 @@ input.sheet-fs-beneficeaffliction {
 }
 .sheet-fs-skill + .sheet-fs-col {
     width: 100%;
+}
+.sheet-fs-skill button {
+    height: 15px;
 }
 
 .sheet-fadingsuns button[type=roll] {
@@ -1121,21 +1127,21 @@ h2.sheet-fs-clickheader {
     font-weight: bold;
 }
 
-.sheet-fs-psipowers .sheet-fs-table { grid-template-columns: 0.5fr 25px 1fr 80px 120px 80px 80px 50px; }
-.sheet-fs-psipowers .sheet-fs-table input:nth-child(3) {
+.sheet-fs-psipowers .sheet-fs-table { grid-template-columns: 30px 0.5fr 25px 1fr 80px 120px 80px 80px 50px; }
+.sheet-fs-psipowers .sheet-fs-table input:nth-child(4) {
     font-weight: bold;
 }
-.sheet-fs-psipowers .sheet-fs-table input:nth-child(2),
-.sheet-fs-psipowers .sheet-fs-table input:nth-child(8) {
+.sheet-fs-psipowers .sheet-fs-table input:nth-child(1),
+.sheet-fs-psipowers .sheet-fs-table input:nth-child(9) {
     text-align: center;
 }
 
-.sheet-fs-theurgyrituals .sheet-fs-table { grid-template-columns: 0.5fr 25px 1fr 80px 120px 50px 80px 80px 50px; }
-.sheet-fs-theurgyrituals .sheet-fs-table input:nth-child(3) {
+.sheet-fs-theurgyrites .sheet-fs-table { grid-template-columns: 30px 0.5fr 25px 1fr 80px 120px 50px 80px 80px 50px; }
+.sheet-fs-theurgyrites .sheet-fs-table input:nth-child(4) {
     font-weight: bold;
 }
-.sheet-fs-theurgyrituals .sheet-fs-table input:nth-child(2),
-.sheet-fs-theurgyrituals .sheet-fs-table input:nth-child(9) {
+.sheet-fs-theurgyrites .sheet-fs-table input:nth-child(1),
+.sheet-fs-theurgyrites .sheet-fs-table input:nth-child(10) {
     text-align: center;
 }
 
@@ -1181,12 +1187,27 @@ h2.sheet-fs-clickheader {
     width: 100%;
 }
 
+button[type="roll"].sheet-fs-hidden {
+    display: none;
+}
+
 button[type="roll"].sheet-fs-d20:before {
     content: ' ';
 }
   
 button[type="roll"].sheet-fs-d20:hover {
     background-position: 0;
+}
+button[type="roll"].sheet-fs-d20 + span.sheet-fs-d20 {
+    display: none;
+}
+button[type="roll"].sheet-fs-d20:hover + span.sheet-fs-d20 {
+    font-weight: bold;
+    display: initial;
+}
+
+button[type="roll"].sheet-fs-d20:hover,
+button[type="roll"].sheet-fs-d20:hover + .sheet-fs-d20 {
     filter: sepia(100%) saturate(100%);
 }
 
@@ -1200,3 +1221,104 @@ button[type="roll"].sheet-fs-d20 {
     background-color: transparent;
     padding-right: 20px;
 }
+
+
+
+/* Configure the button styling. This example makes it look like a radio. */
+div.sheet-fs-dots {
+    display: flex;
+    flex-direction: row;
+    margin-left: 3px;
+}
+
+div.sheet-fs-dots .sheet-fs-dot:nth-child(5n+2) {
+    margin-left: 5px;
+}
+
+button.sheet-fs-dot {
+    padding: 0;
+    border: solid 1px #a8a8a8;
+    cursor: pointer;
+    width: 12px;
+    height: 12px;
+    /*border-radius: 50%;*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 2px;
+  }
+
+  button.sheet-fs-dot:hover,
+  button.sheet-fs-dot > span:hover {
+    filter: sepia(100%) saturate(100%);
+  }
+  
+  button.sheet-fs-dot > span {
+    width: 8px;
+    height: 8px;
+    /*border-radius: 50%;*/
+    background: buttontext;
+    background-color: #4a6486;
+  }
+  
+  /* Hide the "checked" section of the radio if the hidden attribute value is greater than the button value */
+  input.sheet-fs-dot[value="1"] ~ button.sheet-fs-gt-1 > span.sheet-fs-checked {
+    display: none;
+  }
+  input.sheet-fs-dot[value="2"] ~ button.sheet-fs-gt-2 > span.sheet-fs-checked {
+    display: none;
+  }
+  input.sheet-fs-dot[value="3"] ~ button.sheet-fs-gt-3 > span.sheet-fs-checked {
+    display: none;
+  }
+  input.sheet-fs-dot[value="4"] ~ button.sheet-fs-gt-4 > span.sheet-fs-checked {
+    display: none;
+  }
+  input.sheet-fs-dot[value="5"] ~ button.sheet-fs-gt-5 > span.sheet-fs-checked {
+    display: none;
+  }
+  input.sheet-fs-dot[value="6"] ~ button.sheet-fs-gt-6 > span.sheet-fs-checked {
+    display: none;
+  }
+  input.sheet-fs-dot[value="7"] ~ button.sheet-fs-gt-7 > span.sheet-fs-checked {
+    display: none;
+  }
+  input.sheet-fs-dot[value="8"] ~ button.sheet-fs-gt-8 > span.sheet-fs-checked {
+    display: none;
+  }
+  input.sheet-fs-dot[value="9"] ~ button.sheet-fs-gt-9 > span.sheet-fs-checked {
+    display: none;
+  }
+  input.sheet-fs-dot[value="10"] ~ button.sheet-fs-gt-10 > span.sheet-fs-checked {
+    display: none;
+  }
+  input.sheet-fs-dot[value="11"] ~ button.sheet-fs-gt-11 > span.sheet-fs-checked {
+    display: none;
+  }
+  input.sheet-fs-dot[value="12"] ~ button.sheet-fs-gt-12 > span.sheet-fs-checked {
+    display: none;
+  }
+  input.sheet-fs-dot[value="13"] ~ button.sheet-fs-gt-13 > span.sheet-fs-checked {
+    display: none;
+  }
+  input.sheet-fs-dot[value="14"] ~ button.sheet-fs-gt-14 > span.sheet-fs-checked {
+    display: none;
+  }
+  input.sheet-fs-dot[value="15"] ~ button.sheet-fs-gt-15 > span.sheet-fs-checked {
+    display: none;
+  }
+  input.sheet-fs-dot[value="16"] ~ button.sheet-fs-gt-16 > span.sheet-fs-checked {
+    display: none;
+  }
+  input.sheet-fs-dot[value="17"] ~ button.sheet-fs-gt-17 > span.sheet-fs-checked {
+    display: none;
+  }
+  input.sheet-fs-dot[value="18"] ~ button.sheet-fs-gt-18 > span.sheet-fs-checked {
+    display: none;
+  }
+  input.sheet-fs-dot[value="19"] ~ button.sheet-fs-gt-19 > span.sheet-fs-checked {
+    display: none;
+  }
+  input.sheet-fs-dot[value="20"] ~ button.sheet-fs-gt-20 > span.sheet-fs-checked {
+    display: none;
+  }
