--- a/Ironcrunch/src/src/Ironcrunch.pug
+++ b/Ironcrunch/src/src/Ironcrunch.pug
@@ -3,8 +3,8 @@
 include ./pages/main.pug
 
 //- Roll Templates
-rolltemplate.sheet-rolltemplate-ironcrunch_moves 
-  include ./roll-templates/moves.pug
+include ./roll-templates/moves/moves.pug
+include ./roll-templates/progress/progress.pug
 
 //- Sheet Workers
 include ./workers/ironcrunch.pug
