--- a/Ironcrunch/src/src/components/bonds/bonds.styl
+++ b/Ironcrunch/src/src/components/bonds/bonds.styl
@@ -1,3 +1,12 @@
 .sheet-bonds-track
   width 437px
   margin-left 203px
+
+.sheet-bonds
+  margin-bottom: 0px
+
+.sheet-bond
+  display: flex
+  flex-direction: column
+  justify-content: center
+  align-items: center
