--- a/Ironcrunch/src/src/components/nav/nav-bar.pug
+++ b/Ironcrunch/src/src/components/nav/nav-bar.pug
@@ -2,7 +2,8 @@
   var pages = [
     { id: 'sheet-summary', text: 'Summary' },
     { id: 'sheet-vows', text: 'Vows' },
-    { id: 'sheet-bonds', text: 'Bonds' }
+    { id: 'sheet-bonds', text: 'Bonds' },
+    { id: 'sheet-proficiencies', text: 'Proficiencies' }
   ]
 
 div.sheet-nav-bar
