--- a/Ironcrunch/src/src/components/progress/progress.styl
+++ b/Ironcrunch/src/src/components/progress/progress.styl
@@ -21,3 +21,31 @@ input.sheet-progress-name
   border: 2px solid #494a4c
   border-radius: 0
   margin-bottom: 0.2em
+
+.sheet-progress-input
+  width: 40px
+  height: 40px
+  font-size: 22px
+  font-weight: bold
+  background: transparent
+  text-align: center
+  justify-content: center
+  align-items: center
+  padding: 2px 0px 0px 12px
+  margin-bottom: 0.4em
+  cursor: pointer
+  border: 2px solid #4C4D4F
+  border-radius: 0
+
+.sheet-progress-input:hover
+  width: 40px
+  height: 40px
+  font-size: 22px
+  font-weight: bold
+  text-align: center
+  justify-content: center
+  align-items: center
+  padding: 2px 0px 0px 12px
+  background-color: #ccc
+  border: 2px solid #4C4D4F
+  border-radius: 0
