--- a/Ironcrunch/src/src/pages/main.pug
+++ b/Ironcrunch/src/src/pages/main.pug
@@ -1,13 +1,14 @@
 //- Header
-include ../components/header/header.pug
+include ../components/header/header
 
 //- Nav Bar
-include ../components/nav/nav-bar.pug
+include ../components/nav/nav-bar
 
 //- Pages
-include ./summary.pug
-include ./bonds.pug
-include ./vows.pug
+include ./summary
+include ./bonds
+include ./vows
+include ./proficiencies
 
 //- Footer
-include ../components/momentum/momentum.pug
+include ../components/momentum/momentum
