--- a/Ironcrunch/src/html/components/nav/nav-bar.html
+++ b/Ironcrunch/src/html/components/nav/nav-bar.html
@@ -9,4 +9,7 @@
   <div class="sheet-nav-child">
     <label for="sheet-bonds">Bonds</label>
   </div>
+  <div class="sheet-nav-child">
+    <label for="sheet-proficiencies">Proficiencies</label>
+  </div>
 </div>
