--- a/Ironcrunch/src/src/Ironcrunch.styl
+++ b/Ironcrunch/src/src/Ironcrunch.styl
@@ -1,11 +1,4 @@
-@import './components/resources/resources'
-@import './components/misses/misses'
-@import './components/bonds/bonds'
-@import './components/vows/vows'
-@import './components/progress/progress'
-@import './components/nav/nav-bar'
-@import './components/momentum/momentum'
-
+// Sheet Core
 .charsheet
   width: 842px !important
   margin: 0 auto !important
@@ -148,27 +141,17 @@ hr
   background: #ccc
   background-image: linear-gradient(to right, #ccc, #333, #ccc)
 
-.sheet-stats
-  display: flex
-  justify-content: space-evenly
-  align-items: center
-  border-radius: 0%
-  margin-bottom: 2px
-
-.sheet-stat
-  display: flex
-  flex-direction: column
-  justify-content: center
-  align-items: center
-
-.sheet-bonds
-  margin-bottom: 0px
-
-.sheet-bond
-  display: flex
-  flex-direction: column
-  justify-content: center
-  align-items: center
+// Components
+@import './components/resources/resources'
+@import './components/misses/misses'
+@import './components/bonds/bonds'
+@import './components/vows/vows'
+@import './components/progress/progress'
+@import './components/nav/nav-bar'
+@import './components/header/header'
+@import './components/momentum/momentum'
+@import './components/stats/stats'
+@import './components/proficiencies/proficiencies'
 
 .sheet-debilities
   margin-bottom: 0px
@@ -336,49 +319,6 @@ input.sheet-filler[type="radio"] + span::before
 /* Remove dot from all radios _after_ selected one */
 input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + span::before
   content: ""
-
-.sheet-stats-title
-  width: 100px
-
-.sheet-stats-input
-  font-family: arial, sans-serif
-  font-weight: bold
-  width: 60px
-  line-height: 40px
-  font-size: 28px
-  text-align: center
-  background: transparent
-  height: 50px !important
-  border: 2px solid #4C4D4F
-  border-radius: 0
-
-.sheet-progress-input
-  width: 40px
-  height: 40px
-  font-size: 22px
-  font-weight: bold
-  background: transparent
-  text-align: center
-  justify-content: center
-  align-items: center
-  padding: 2px 0px 0px 12px
-  margin-bottom: 0.4em
-  cursor: pointer
-  border: 2px solid #4C4D4F
-  border-radius: 0
-
-.sheet-progress-input:hover
-  width: 40px
-  height: 40px
-  font-size: 22px
-  font-weight: bold
-  text-align: center
-  justify-content: center
-  align-items: center
-  padding: 2px 0px 0px 12px
-  background-color: #ccc
-  border: 2px solid #4C4D4F
-  border-radius: 0
 
 .sheet-moves,
 .sheet-oracles
@@ -1051,181 +991,7 @@ span.sheet-show-bond-info
   width: 100%
   margin-top: 0.3em
 
-/* ROLL TEMPLATE */
-.sheet-rolltemplate-ironcrunch_moves table>thead>tr>th,
-.sheet-rolltemplate-ironcrunch_moves table>tbody>tr>th,
-.sheet-rolltemplate-ironcrunch_moves table>tfoot>tr>th,
-.sheet-rolltemplate-ironcrunch_moves table>thead>tr>td,
-.sheet-rolltemplate-ironcrunch_moves table>tbody>tr>td,
-.sheet-rolltemplate-ironcrunch_moves table>tfoot>tr>td,
-.sheet-rolltemplate-ironsworn_oracles table>thead>tr>th,
-.sheet-rolltemplate-ironsworn_oracles table>tbody>tr>th,
-.sheet-rolltemplate-ironsworn_oracles table>tfoot>tr>th,
-.sheet-rolltemplate-ironsworn_oracles table>thead>tr>td,
-.sheet-rolltemplate-ironsworn_oracles table>tbody>tr>td,
-.sheet-rolltemplate-ironsworn_oracles table>tfoot>tr>td,
-.sheet-rolltemplate-ironsworn_delve table>thead>tr>th,
-.sheet-rolltemplate-ironsworn_delve table>tbody>tr>th,
-.sheet-rolltemplate-ironsworn_delve table>tfoot>tr>th,
-.sheet-rolltemplate-ironsworn_delve table>thead>tr>td,
-.sheet-rolltemplate-ironsworn_delve table>tbody>tr>td,
-.sheet-rolltemplate-ironsworn_delve table>tfoot>tr>td,
-.sheet-rolltemplate-ironsworn_delve_oracles table>thead>tr>th,
-.sheet-rolltemplate-ironsworn_delve_oracles table>tbody>tr>th,
-.sheet-rolltemplate-ironsworn_delve_oracles table>tfoot>tr>th,
-.sheet-rolltemplate-ironsworn_delve_oracles table>thead>tr>td,
-.sheet-rolltemplate-ironsworn_delve_oracles table>tbody>tr>td,
-.sheet-rolltemplate-ironsworn_delve_oracles table>tfoot>tr>td
-  padding: 4px
-  border: none
-
-.sheet-rolltemplate-ironcrunch_moves table,
-.sheet-rolltemplate-ironsworn_oracles table,
-.sheet-rolltemplate-ironsworn_delve table,
-.sheet-rolltemplate-ironsworn_delve_oracles table
-  width: 100%
-  border: 1px solid
-  color: #4C4D4F
-  font-size: 1em
-  font-family: Verdana, Arial, sans-serif
-  margin: 0px
-
-.sheet-rolltemplate-ironcrunch_moves th,
-.sheet-rolltemplate-ironsworn_oracles th,
-.sheet-rolltemplate-ironsworn_delve th,
-.sheet-rolltemplate-ironsworn_delve_oracles th
-  background-color: #434b4d
-  color: #ffffff
-  padding: 2px
-  /*border-bottom: 1px solid #4C4D4F;*/
-  line-height: 1.2em
-  font-size: 1.2em
-  text-align: center
-
-.sheet-rolltemplate-ironcrunch_moves .sheet-subheader,
-.sheet-rolltemplate-ironsworn_oracles .sheet-subheader,
-.sheet-rolltemplate-ironsworn_delve .sheet-subheader,
-.sheet-rolltemplate-ironsworn_delve_oracles .sheet-subheader
-  background-color: #434b4d
-  color: #ffffff
-  line-height: 0.9em
-  font-size: 0.9em
-  font-family: Verdana, arial, sans-serif
-  font-variant: small-caps
-  font-style: italic
-  font-weight: bold
-  text-align: left
-  padding: 0.5rem
-
-.sheet-rolltemplate-ironcrunch_moves .sheet-subfooter,
-.sheet-rolltemplate-ironsworn_oracles .sheet-subfooter,
-.sheet-rolltemplate-ironsworn_delve .sheet-subfooter,
-.sheet-rolltemplate-ironsworn_delve_oracles .sheet-subfooter
-  background-color: #b9b9b6
-  line-height: 0.9em
-  font-size: 0.9em
-  font-family: Verdana, arial, sans-serif
-  font-variant: small-caps
-  font-style: italic
-  font-weight: bold
-  text-align: left
-
-.sheet-rolltemplate-ironsworn_delve .sheet-rarity-die
-  border-top: 2px solid #000000
-  color: #ffffff
-  background-color: #6a286a
-  border-bottom: 2px solid #000000
-
-.sheet-rolltemplate-ironcrunch_moves .sheet-alert,
-.sheet-rolltemplate-ironsworn_delve .sheet-alert
-  color: white
-  background-color: #761818
-
-.sheet-rolltemplate-ironcrunch_moves .sheet-opportunity,
-.sheet-rolltemplate-ironsworn_oracles .sheet-opportunity,
-.sheet-rolltemplate-ironsworn_delve .sheet-opportunity,
-.sheet-rolltemplate-ironsworn_delve_oracles .sheet-opportunity
-  color: white
-  background-color: #0B3F0B
-
-.sheet-rolltemplate-ironcrunch_moves .sheet-strong-hit,
-.sheet-rolltemplate-ironsworn_delve .sheet-strong-hit
-  color: white
-  background-color: #125812
-
-.sheet-rolltemplate-ironcrunch_moves .sheet-weak-hit,
-.sheet-rolltemplate-ironsworn_delve .sheet-weak-hit
-  color: white
-  background-color: #186251
-
-.sheet-rolltemplate-ironcrunch_moves .sheet-miss,
-.sheet-rolltemplate-ironsworn_delve .sheet-miss
-  color: white
-  background-color: #7D2B1D
-
-.sheet-rolltemplate-ironcrunch_moves .sheet-complication,
-.sheet-rolltemplate-ironsworn_delve .sheet-complication
-  color: white
-  background-color: #761818
-
-.sheet-rolltemplate-ironcrunch_moves .userscript-tcat,
-.sheet-rolltemplate-ironsworn_oracles .userscript-tcat,
-.sheet-rolltemplate-ironsworn_delve .userscript-tcat,
-.sheet-rolltemplate-ironsworn_delve_oracles .userscript-tcat
-  font-weight: bold
-
-.sheet-rolltemplate-ironcrunch_moves td,
-.sheet-rolltemplate-ironsworn_oracles td,
-.sheet-rolltemplate-ironsworn_delve td,
-.sheet-rolltemplate-ironsworn_delve_oracles td
-  padding: 5px
-  /*border-bottom: 1px solid #4C4D4F;*/
-
-.sheet-rolltemplate-ironsworn_oracles .sheet-oracle-dice,
-.sheet-rolltemplate-ironsworn_delve .sheet-oracle-dice,
-.sheet-rolltemplate-ironsworn_delve_oracles .sheet-oracle-dice
-  width: 2em
-  border-right: 1px solid
-  background: #bfbfbf
-
-.sheet-rolltemplate-ironsworn_oracles .sheet-oracle-dice span,
-.sheet-rolltemplate-ironsworn_delve .sheet-oracle-dice span,
-.sheet-rolltemplate-ironsworn_delve_oracles .sheet-oracle-dice span
-  border: 0px !important
-
-.sheet-rolltemplate-ironsworn_oracles .sheet-oracle-double-dice,
-.sheet-rolltemplate-ironsworn_delve .sheet-oracle-double-dice,
-.sheet-rolltemplate-ironsworn_delve_oracles .sheet-oracle-double-dice
-  width: 5.7em
-  border-right: 1px solid
-  text-align: center
-  background: #bfbfbf
-  padding: 0.1em
-
-.sheet-rolltemplate-ironsworn_oracles .sheet-oracle-double-dice span,
-.sheet-rolltemplate-ironsworn_delve .sheet-oracle-double-dice span,
-.sheet-rolltemplate-ironsworn_delve_oracles .sheet-oracle-double-dice span
-  border: 0px !important
-
-.sheet-rolltemplate-ironcrunch_moves tr:nth-child(odd),
-.sheet-rolltemplate-ironsworn_oracles tr:nth-child(odd),
-.sheet-rolltemplate-ironsworn_delve tr:nth-child(odd),
-.sheet-rolltemplate-ironsworn_delve_oracles tr:nth-child(odd)
-  background-color: #d9d9d6
-
-.sheet-rolltemplate-ironcrunch_moves tr:nth-child(even),
-.sheet-rolltemplate-ironsworn_oracles tr:nth-child(even),
-.sheet-rolltemplate-ironsworn_delve tr:nth-child(even),
-.sheet-rolltemplate-ironsworn_delve_oracles tr:nth-child(even)
-  background-color: #e9e9e6
-
-.sheet-rolltemplate-ironcrunch_moves .inlinerollresult,
-.sheet-rolltemplate-ironsworn_oracles .inlinerollresult,
-.sheet-rolltemplate-ironsworn_delve .inlinerollresult,
-.sheet-rolltemplate-ironsworn_delve_oracles .inlinerollresult
-  display: inline-block
-  min-width: 1.5em
-  text-align: center
-  border: 2px solid #434b4d
-  background: transparent
-
+// Roll Templates
+@import './roll-templates/template'
+@import './roll-templates/moves/moves'
+@import './roll-templates/progress/progress'
