--- a/Ironcrunch/src/src/components/bonds/track.pug
+++ b/Ironcrunch/src/src/components/bonds/track.pug
@@ -1,5 +1,5 @@
 - var track = [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
-include ../progress/box.pug
+include ../progress/box
 
 div.sheet-bonds-track
   div
