--- a/Ironcrunch/src/src/components/header/header.pug
+++ b/Ironcrunch/src/src/components/header/header.pug
@@ -1,7 +1,10 @@
 - var trackValues = { 5: '+5', 4: '+4', 3: '+4', 2: '+2', 1: '+1', 0: '0' }
-div.sheet-character-details-bar
-  div
+div.sheet-header
+  div.sheet-header-items
     div.sheet-character-name
+      h3.sheet-character-title Character
       input(type='text' class='sheet-pc-name' name='attr_character_name' placeholder='Character Name')
-    
-    include ../resources/resources.pug 
+    div.sheet-character-role
+      h3.sheet-character-title Role / Title
+      input(type='text' class='sheet-pc-name' name='attr_character_role' placeholder='Character Role/Title')
+  include ../resources/resources
