--- a/Ironcrunch/src/src/components/vows/vows.pug
+++ b/Ironcrunch/src/src/components/vows/vows.pug
@@ -28,7 +28,7 @@ div.sheet-vows
           type="roll"
           title="Fulfill your Vow"
           name="rollVow"
-          value="&{template:ironcrunch} {{header=@{character_name} <em>Fulfill Your Vow</em> }} {{vowname=@{vow_name}}} {{vow=[[@{vow-filled}]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}}"
+          value="&{template:ironcrunch_progress} {{header=@{character_name} <em>Fulfill Your Vow</em> }} {{vowname=@{vow_name}}} {{vow=[[@{vow-filled}]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}}"
         )               
         input(
           type="text"
