--- a/Ironcrunch/src/src/pages/summary.pug
+++ b/Ironcrunch/src/src/pages/summary.pug
@@ -1,4 +1,6 @@
 input(type="radio" name="attr_ironcrunch-page" id="sheet-summary" class="sheet-hide sheet-summary" value="1" checked)
 div.sheet-summary.sheet-hide
-  include ../components/stats/stats.pug
-  include ../components/misses/track.pug
+  include ../components/details/details
+  include ../components/stats/stats
+  include ../components/misses/track
+  include ../components/notes/notes
