--- a/Jinkies/jinkies.css
+++ b/Jinkies/jinkies.css
@@ -1,6 +1,35 @@
+@import url('https://fonts.googleapis.com/css?family=Creepster|Oswald');
+
+input, textarea, select {
+    border: none;
+}
+
 .sheet-desc {
     width: 98;%;
     height:100px;
+}
+
+.sheet-headings {
+	font-family:Creepster;
+	font-size:30px;
+	font-style:outline;
+}
+
+.sheet-field {
+border:none;
+}
+
+.sheet-stat {
+
+}
+
+.sheet-statname {
+    font-family:Oswald;
+    
+}
+
+.sheet-statblock {
+
 }
 
 .sheet-archetype {
@@ -19,10 +48,11 @@
 }
 
 .sheet-charname {
-    font-size:22px;
+	font-size: 22px;
     font-weight:bold;
     border:none;
     background-color:#ffffff;
+    font-family:Creepster;
 }
 
 button[type=roll].sheet-moveroll::before { 
@@ -43,7 +73,9 @@ button[type=roll].sheet-moveroll::before {
     font-weight:bold;
 }
 
+.sheet-credits {
 
+}
 
 .sheet-rolltemplate-rolloutput .sheet-template-header {
     font-weight:bold;
