removed unneeded packs

--- a/Ironcrunch/precompiled/src/Ironcrunch.styl
+++ b/Ironcrunch/precompiled/src/Ironcrunch.styl
@@ -1,3 +1,15 @@
+// Fonts
+@css {
+  @import url('https://fonts.googleapis.com/css?family=Open+Sans');
+  @import url('https://fonts.googleapis.com/css?family=Montserrat');
+  @import url('https://fonts.googleapis.com/css?family=Lora');
+  @import url('https://fonts.googleapis.com/css?family=Nunito+Sans');
+  @import url('https://fonts.googleapis.com/css?family=Arimo');
+  @import url('https://fonts.googleapis.com/css?family=Crimson+Text');
+  @import url('https://fonts.googleapis.com/css?family=Libre+Baskerville');
+  @import url('https://fonts.googleapis.com/css?family=Amiri');
+}
+
 // Sheet Core
 .charsheet
   width: 842px !important
@@ -147,6 +159,7 @@ hr
 @import './components/bonds/bonds'
 @import './components/vows/vows'
 @import './components/progress/progress'
+@import './components/details/details'
 @import './components/nav/nav-bar'
 @import './components/header/header'
 @import './components/momentum/momentum'
