- Added input field for non proficient penalty with weapons
- Added checkbox on Standard weapons for non profecient
- Added dropdown for multiple levels of proficiency for Player Option melee weapon

--- a/AD&D 2E Revised/2EStyle.css
+++ b/AD&D 2E Revised/2EStyle.css
@@ -90,12 +90,13 @@
     display: inline-block;
     width: 4.1em;
 }
-
 .charsheet input.sheet-table-dynamic {
+    display: inline-block;
     width: 0;
     min-width: 100%;
     box-sizing: border-box;
 }
+
 .charsheet input[type="number"].sheet-tiny {
     display: inline-block;
     width: 23px;
@@ -109,18 +110,28 @@
 
 .charsheet select.sheet-small {
     display: inline-block;
-    width: 29px;
+    margin: 0 0;
+    width: 30px;
 }
 .charsheet select.sheet-short {
     display: inline-block;
     margin: 0 0;
-    width: 4em;
+    width: 3.5em;
 }
 .charsheet select.sheet-mintext {
     display: inline-block;
     margin: 0 0;
     width: 74px;
 }
+
+.charsheet select.sheet-table-dynamic {
+    display: inline-block;
+    margin: 0 0;
+    width: 0;
+    min-width: 100%;
+    box-sizing: border-box;
+}
+
 input.sheet-arrow
 {
     float: left;
